tests/neg-custom-args/captures/i26035.check
-- Error: tests/neg-custom-args/captures/i26035.scala:8:22 -------------------------------------------------------------
8 |case class Foo(f: [A] => () => Unit) // error
  |                      ^
  |Implementation restriction: polymorphic function types cannot wrap impure function types if capture checking is enabled.
  |Workaround: introduce an empty term-parameter list right after the type binder, e.g. `[A] => () -> B => C`.
